# arduino_cmake

./: CMakeLists.txt  README.md  arduino_core.cmake  arduino_paths.cmake  arduino_tools.cmake  atmega328_defs.cmake  blink.cpp  tiny85_defs.cmake
atmega328/: core.cmake  defs.cmake  deploy.cmake  libs.cmake  paths.cmake  tools.cmake
esp32/: core.cmake  defs.cmake  deploy.cmake  libs.cmake  paths.cmake  tools.cmake  wroom32.cmake
esp32/core/: CMakeLists.txt
esp8266/: 12e.cmake  arduino_version.cmake  core.cmake  defs.cmake  deploy.cmake  eagle.cmake  generic.cmake  libs.cmake  paths.cmake  tools.cmake
esp8266/2.4.0/: defs.cmake  deploy.cmake  libs.cmake  paths.cmake
esp8266/2.4.0/core/: CMakeLists.txt
esp8266/2.5.2/: defs.cmake  eagle.cmake  libs.cmake  paths.cmake
esp8266/2.5.2/core/: CMakeLists.txt
esp8266/core/: CMakeLists.txt
esp8266/env/: wifi.cmake
teensy/: core.cmake  defs.cmake  deploy.cmake  libs.cmake  paths.cmake  tools.cmake
ut/: Runner.cpp
ut/stubs/: Arduino.cpp  Arduino.h  LiquidCrystal.cpp  LiquidCrystal.h  LiquidCrystal_I2C.h  PinChangeInt.h  PinEvents.cpp  PinEvents.h  Print.cpp  RF24.cpp  RF24.h  SdFat.h  Serial.cpp  Serial.h  TinyDebugSerial.h  Wire.cpp  Wire.h
